# ExecutionOS

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: GETTING_STARTED.md  implementation_logs.md
docs/blog/: post-1-tauri-rust-react-architecture.md  post-2-stop-using-todo-apps.md  post-3-local-ai-that-knows-its-place.md
memory-bank/: ai-behavior.md  ai-memory.md  api-contracts.md  architecture.md  coding-standards.md  context-engine.md  design-system.md  domain-models.md  execution-model.md  export-system.md  feature-specs.md  folder-structure.md  knowledge-system.md  life-domains.md  nfr.md  performance-guidelines.md  principles.md  review-system.md  roadmap.md  security-model.md  state-management.md  sync-strategy.md  tech-stack.md  testing-strategy.md  ux-guidelines.md  vision.md
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  context.rs  domains.rs  execution.rs  export.rs  goals.rs  knowledge.rs  mod.rs  reflection.rs  settings.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_seed_domains.sql  003_fts5_triggers.sql
src-tauri/src/db/models/: context.rs  domain.rs  goal.rs  knowledge.rs  mod.rs  reflection.rs  time_block.rs
src/lib/: animations.ts  constants.ts  utils.ts
src/pages/: ContextPage.tsx  DomainsPage.tsx  GoalsPage.tsx  KnowledgePage.tsx  ReflectionPage.tsx  TodayPage.tsx  (+3 more)
(+54 files in other folders)
